# bpmn-gen-core

./: pyproject.toml  requirements.txt
GenAI/: AssistantConnector.py  Sculptor.py  __init__.py
TaskManagement/: Task.py  TaskProcessor.py
aidonis_core/GenAI/: Sculptor.py
aidonis_core/TaskManagement/: Task.py  TaskProcessor.py  __init__.py
bpmn_gen_core/GenAI/: AssistantConnector.py  Sculptor.py
bpmn_gen_core/TaskManagement/: Task.py  TaskEndNotifier.py  TaskProcessor.py
taskManagement/: Task.py  TaskEndNotifier.py  TaskProcessor.py  ThreadedTask.py
