[build-system]
requires = ["setuptools", "wheel", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "bpmn_gen_core"
version = "0.5"
description = "Asynchronous BPMN generator for Python with OpenAI Assistants"
authors = ["Esteban Sánchez - FosanzDev <me@fosanz.dev>"]

[tool.poetry.dependencies]
python = "^3.8"
annotated-types = "0.6.0"
anyio = "4.3.0"
certifi = "2024.2.2"
colorama = "0.4.6"
distro = "1.9.0"
h11 = "0.14.0"
httpcore = "1.0.4"
httpx = "0.27.0"
idna = "3.6"
openai = "1.23.2"
pydantic = "2.6.4"
pydantic-core = "2.16.3"
sniffio = "1.3.1"
tqdm = "4.66.2"
typing-extensions = "4.10.0"